--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -270,28 +270,29 @@
 }
 
 .settingsButtonContainer{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    position: fixed;
-    background-color: var(--primary-color);
-    top: 0;
-    z-index: 1000;
-    left: 0;
-    height: 9vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  position: fixed;
+  background-color: var(--primary-color);
+  top: -8vh;
+  z-index: 1000;
+  left: 0;
+  height: 18vh;
 }
 
 .settingsButton{
-    width: 20vw;
-    height: 5vh;
-    color: var(--primary-color);
-    background-color: #fff;
-    border-radius: 10px;
-    display: flex;
-    font-family: "NTR", sans-serif;
-    font-size: 1.2rem;
-    justify-content: center;
-    align-items: center;
-    margin-right: 4vw;
+  width: 20vw;
+  height: 5vh;
+  color: var(--primary-color);
+  background-color: #fff;
+  border-radius: 10px;
+  margin-top: 9vh;
+  display: flex;
+  font-family: "NTR", sans-serif;
+  font-size: 1.2rem;
+  justify-content: center;
+  align-items: center;
+  margin-right: 4vw;
 }
