--- a/src/app/workout/schedule/schedule.module.css
+++ b/src/app/workout/schedule/schedule.module.css
@@ -33,6 +33,7 @@
   font-size: 1.5rem;
   font-weight: 250;
   text-align: center;
+  width: 70vw;
   margin-bottom: 0;
   font-family: "NTR", sans-serif;
   color: white;
@@ -48,7 +49,7 @@
 .stickyDiv {
   position: sticky;
   top: -7vh;
-  height: 13vh;
+  height: 15vh;
   display: flex;
   padding: 1vh;
   width: 100%;
