--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -270,29 +270,31 @@
 }
 
 .settingsButtonContainer{
+  position: sticky;
+  top: -7vh;
+  height: 15vh;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  padding: 1vh;
   width: 100%;
-  position: fixed;
-  background-color: var(--primary-color);
-  top: -8vh;
+  flex-direction: row;
   z-index: 1000;
-  left: 0;
-  height: 18vh;
+  background-color: var(--primary-color);
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .settingsButton{
-  width: 20vw;
-  height: 5vh;
-  color: var(--primary-color);
-  background-color: #fff;
-  border-radius: 10px;
-  margin-top: 9vh;
   display: flex;
-  font-family: "NTR", sans-serif;
-  font-size: 1.2rem;
   justify-content: center;
   align-items: center;
-  margin-right: 4vw;
+  width: 20vw;
+  border-radius: 15px;
+  margin-right: 10vw;
+  margin-bottom: 3vw;
+  height: 5vh;
+  background-color: #f8f4e3;
+  color: var(--primary-color);
+  font-family: "NTR", sans-serif;
+  font-size: 1.2rem;
+  line-height: 120%;
 }
