--- a/src/app/workout/scheduleListAll/scheduleListAll.module.css
+++ b/src/app/workout/scheduleListAll/scheduleListAll.module.css
@@ -1,16 +1,51 @@
-.schedule{
-    background-color: var(--secondary-color);
-    width: 45vw; /* Adjust width to fit two items per row */
-    height: 10vh;
-    border-radius: 15px;
-    color: #fff;
-    font-family: "NTR", sans-serif;
-    font-size: 1.5rem;
-    text-align: center;
-    margin-top: 2vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.swipeableListItem{
+  position: relative !important;
+  width: 45vw !important;
+  height: 7vh !important;
+  overflow: hidden !important;
+  border-radius: 15px !important;
+  transition: transform 0.3s !important;
+  font-family: "NTR", sans-serif !important;
+  font-size: 1.5rem !important;
+  color: #fff;
+  margin: 4vw;
+  
+}
+
+.item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--secondary-color); /* Your custom styles */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 7vh;
+  width: 45vw;
+}
+
+.itemDelete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-family: "NTR", sans-serif !important;
+  font-size: 1.5rem !important;
+  color: #fff;
+  background-color: red;
+  display: flex !important;
+  text-align: center !important;
+  justify-content: center !important;
+  align-items: center !important;
+  height: 7vh;
+  width: 45vw;
+}
+
+.list{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5vh;
 }
 
 .mainContainer{
