--- a/src/app/logWorkout/logWorkout.module.css
+++ b/src/app/logWorkout/logWorkout.module.css
@@ -6,12 +6,13 @@
 }
 
 .title{
-    color:#fff;
-    margin-top:5vh;
+    color: #fff;
+    margin-top: 8vh;
     font-family: "NTR", sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     text-align: center;
     font-weight: 100;
+    width: 80vw;
 }
 
 .scheduleContainer{
@@ -28,11 +29,11 @@
     justify-content: center;
     align-items: center;
     width: 60vw;
-    height: 10vh;
+    height: 7vh;
     margin-top: 5vh;
     border-radius: 25px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
-    background-color: #F8F4E3;
+    background-color: #ffff;
 }
 
 .scheduleItem p{
