--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -46,6 +46,7 @@
   justify-content: center;
   align-items: center;
   width: 40px;
+  z-index: 500;
   height: 40px;
   background-color: #fff;
   border-radius: 50px;
@@ -297,4 +298,17 @@
   font-family: "NTR", sans-serif;
   font-size: 1.2rem;
   line-height: 120%;
+}
+
+.progressContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 154px;
+  height: 154px;
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: 4;
 }
