--- a/src/app/profile/settings/settings.module.css
+++ b/src/app/profile/settings/settings.module.css
@@ -9,6 +9,7 @@
     font-size: 2rem;
     font-family: "NTR", sans-serif;
     color: #fff;
+    margin-top: 0;
     margin-bottom: 1rem;
 }
 
@@ -148,19 +149,25 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
+    margin-top: 4vh;
     border-radius: 10px;
   }
 
   .logout{
     cursor: pointer;
     border: none;
-    background-color: #fff;
+    background-color: var(--secondary-color);
     color: var(--primary-color);
+    border: 2px solid #fff;
     font-family: "NTR", sans-serif;
-    font-size: 1.2em;
+    font-size: 1.3em;
     border-radius: 10px;
     margin-left: 5vw;
-    width: 30vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50vw;
     margin-right: 5vw;
+    height: 6vh;
     padding: 10px 20px;
   }
