--- a/src/app/workout/schedule/schedule.module.css
+++ b/src/app/workout/schedule/schedule.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 15vh;
+  margin-bottom: 5vh;
   align-items: center;
 }
 
@@ -92,4 +92,19 @@
     text-align: center;
     line-height: 120%;
     margin: 10px;
+}
+
+.offlineButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70vw;
+    border-radius: 15px;
+    margin-bottom: 15vh;
+    height: 5vh;
+    background-color: #fff;
+    color: var(--primary-color);
+    font-family: "NTR", sans-serif;
+    font-size: 1.2rem;
+    line-height: 120%;
 }
